--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "antd",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3999",
   "dependencies": {
     "antd": "^3.0.0",
     "axios": "^0.17.1",
     "better-scroll": "^1.6.3",
+    "fetch": "^1.1.0",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "lodash": "^4.17.10",
     "moment": "^2.19.3",
+    "multer": "^1.3.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
